ontol/ontol-compiler/test-cases/error/parser/stmt_invalid.on
foobar // ERROR parse error: expected keyword, found symbol
